--- a/barbearia alura pag 01/style.css
+++ b/barbearia alura pag 01/style.css
@@ -3,6 +3,9 @@
     padding: 0px;
     
 }
+body {
+    font-family: 'Montserrat', sans-serif;
+}
 
 header {
     background: #BBBBBB;
@@ -104,8 +107,7 @@ footer {
 }
 
 main {
-    width: 940px;
-    margin: 0 auto
+  
 }
 
 form {
@@ -158,4 +160,108 @@ thead {
 td, th{
     border: 1px solid black;
     padding: 8px 15px;
+}
+
+/* Css página principal */
+
+.banner {
+width: 100%;
+}
+
+.titulo-principal {
+text-align: center;
+font-size: 2em;
+margin: 0 0 1em;
+clear: left;
+text-shadow: ;
+}
+
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+    color:rgb (0, 0, 0,);
+}
+ 
+
+.principal p {
+margin: 0 0 1em;
+
+}
+
+
+.principal strong {
+    font-weight: bold;
+}
+.principal em {
+    font-style:italic;
+}
+
+.utensilios{
+    width: 120px;
+    float:left;
+    margin: 0 20px;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888); 
+ }
+ 
+ .mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+   
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+.lista-beneficios {
+   width: 40%; 
+   display: inline-block;
+   vertical-align: top;
+
+}
+
+.itens {
+    line-height: 1.5;
+    list-style: none;
+}
+.itens:before {
+    content:"★ ";
+}
+
+.itens:first-child {
+    font-weight: bold;
+
+}
+
+.imagem-beneficios{
+    width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
+
+}
+
+.imagem-beneficios:hover {
+    opacity: 0.5;
+}
+
+.video {
+    width: 560px;
+    margin: 1em auto;
 }
