--- a/barbearia alura pag 01/style.css
+++ b/barbearia alura pag 01/style.css
@@ -265,3 +265,25 @@ margin: 0 0 1em;
     width: 560px;
     margin: 1em auto;
 }
+
+@media screen and (max-width:480px) {
+.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+    width: auto;
+}
+h1 {
+    text-align: center;
+}
+nav {
+    position: static;
+}
+.linta-beneficios, .imagem-beneficios {
+
+}
+.produtos, .produto-descricao, .produto-preco{
+    width: auto;;
+}
+
+}
+
+
+  
